# POC-IQ6900

./: .env.example  .env.exmaple  .gitignore  .gitmodules  README.md  package-lock.json  package.json  pakcage.json  pyproject.toml
broadcast/DeployDemoTara.s.sol/842/: run-1712222503.json  run-latest.json
cache/: solidity-files-cache.json
scripts/: DeployDemoTara.s.sol  DeployIQ69000.s.sol  uploadChadElod.py  uploadTGdata.py
src/: DemoTara.sol  code_in.sol
