[tool.poetry]
name = "foundry-example"
version = "0.1.0"
description = ""
authors = ["Guilherme Barreiro Vieira <guibvieira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^7.8.0"
dotenv = "^0.9.9"
pandas = "^2.2.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
